Remove 5gvci.com options and service worker import
Removed options and service worker import related to 5gvci.com.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="monetag" content="8d31c4f7af51fe965100c8ae56b9ceef">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title>CashReward App</title>
@@ -686,12 +687,7 @@
             };
         }
         window.showAlert = showAlert;
-self.options = {
-    "domain": "5gvci.com",
-    "zoneId": 10161818
-}
-self.lary = ""
-importScripts('https://5gvci.com/act/files/service-worker.min.js?r=sw')
+
     </script>
 </body>
 </html>
